--- a/content/shopassistant/css/structure.css
+++ b/content/shopassistant/css/structure.css
@@ -3605,6 +3605,7 @@ body:not(.with_aside) .portfolio_group.list .portfolio-item .portfolio-item-fw-w
 	padding-top: 30px;
 }
 #Footer .footer_copy .copyright {
+	display: none;
 	float: left;
 }
 #Footer .footer_copy a#back_to_top {
