--- a/css/index.css
+++ b/css/index.css
@@ -9,12 +9,22 @@ select {
   border: none;
   outline: none;
 }
+@media only screen and (max-width: 767px) {
+  select {
+    position: absolute;
+    left: -30px;
+    top: 50%;
+    transform: translate(-50%, -50%);
+  }
+  .home-title-button {
+    margin-bottom: 40px !important;
+  }
+}
 
 .home-title {
-  text-align: left;
-  line-height: 80px;
-  font-weight: 600;
-  font-size: 60px;
+  font-size: 80px;
+  line-height: 110px;
+  font-weight: 700;
   border-color: rgb(18, 38, 58);
   border-style: none;
   margin: 0px;
@@ -22,7 +32,6 @@ select {
 }
 .home-title-themecolor {
   color: rgb(255, 207, 0);
-  text-align: left;
   line-height: 80px;
   font-weight: 600;
   font-size: 60px;
@@ -31,7 +40,6 @@ select {
   margin: 0px;
 }
 .home-title-describe {
-  text-align: left;
   line-height: 26px;
   font-weight: 400;
   font-size: 16px;
@@ -43,7 +51,6 @@ select {
   background-color: rgb(131, 10, 72);
   font-family: Inter;
   visibility: visible;
-  text-align: left;
   line-height: 32px;
   font-weight: 700;
   font-size: 16px;
@@ -51,12 +58,13 @@ select {
   border-style: none;
   margin: 0px;
   border-radius: 12px;
-  padding: 23px 31px;
+  padding: 15px 31px;
   color: rgb(255, 255, 255);
   text-decoration: none;
   white-space: nowrap;
   width: auto;
   height: auto;
+  display: inline-block;
 }
 .home-title-button:hover {
   background-color: rgb(193, 15, 107);
@@ -68,7 +76,7 @@ select {
 }
 .home-decorate-two {
   position: absolute;
-  left: 2%;
+  left: 1%;
   bottom: 26%;
 }
 
@@ -100,7 +108,7 @@ select {
 }
 
 .bottom-h2 {
-  font-family: "";
+  font-family: '';
 }
 
 .country-img {
@@ -124,7 +132,7 @@ select {
 
 .country-image_wrapper {
   clip-path: path(
-    "M 20 190 C 40 90 90 60 110 50 Q 170 20 220 30 Q 320 50 350 160 Q 370 260 310 330 Q 260 380 180 390 Q 80 380 40 320 Q 10 270 20 190 "
+    'M 20 190 C 40 90 90 60 110 50 Q 170 20 220 30 Q 320 50 350 160 Q 370 260 310 330 Q 260 380 180 390 Q 80 380 40 320 Q 10 270 20 190 '
   );
   background-color: #fff7f1;
 }
@@ -142,7 +150,7 @@ select {
 }
 
 .about-wrapper {
-  font-family: "";
+  font-family: '';
 }
 
 .text-alight-lift {
@@ -162,18 +170,7 @@ select {
 
 .culture .themecolor {
   font-size: 60px;
-  /* margin-left: -106px; */
   line-height: 98px;
-}
-@media only screen and (max-width: 1430px) {
-  .culture .themecolor {
-    font-size: 48px;
-    line-height: 88px;
-  }
-  .culture .top-title {
-    font-size: 50px;
-    line-height: 88px;
-  }
 }
 
 .culture-describe {
@@ -229,7 +226,7 @@ select {
   left: 15px;
   bottom: 15px;
   right: 15px;
-  content: "";
+  content: '';
   position: absolute;
   transform: scale(0.8);
   transition: all 400ms ease;
@@ -303,7 +300,7 @@ select {
   padding-bottom: 10px;
 }
 .product-sort .tab::after {
-  content: "";
+  content: '';
   position: absolute;
   left: 0;
   bottom: 0;
@@ -346,7 +343,7 @@ select {
   -webkit-box-orient: vertical;
 }
 .about-wrapper .google_font {
-  font-family: "", Arial, Tahoma, sans-serif;
+  font-family: '', Arial, Tahoma, sans-serif;
   font-size: 60px;
   line-height: 60px;
   font-weight: 600;
@@ -369,29 +366,25 @@ select {
   object-fit: cover;
 }
 
-.CN_home_index {
-  padding-right: 11%;
-  padding-top: 120px;
-  padding-left: 120px;
+.index-wrapper .home-index {
+  padding: 120px 5% 0;
 }
-.EN_home_index {
-  padding-left: 80px;
-  padding-top: 120px;
-}
-.EN_home_index p[lang="home_index_second"] {
+
+.EN_home_index p[lang='home_index_second'] {
   font-size: 24px;
   font-weight: 400;
+  line-height: 40px;
 }
-.EN_home_index .home-title {
-  font-size: 44px;
-}
+/* .EN_home_index p[lang="home_index_third"] {
+  line-height: 80px;
+} */
 .EN_home_index .home-title-themecolor {
   font-size: 44px;
 }
-.EN_home_third p[lang="home_third_ninth"] {
+.EN_home_third p[lang='home_third_ninth'] {
   margin-bottom: 4rem;
 }
-.EN_home_third p[type="justify"] {
+.EN_home_third p[type='justify'] {
   text-align: center;
 }
 .CN .mobile_align_center {
@@ -399,27 +392,27 @@ select {
   border: 1px solid #e2e2e2;
   border-radius: 32px;
 }
-.EN_home_fourth p[lang="home_fourth_fourth"] {
+.EN_home_fourth p[lang='home_fourth_fourth'] {
   margin-bottom: 2.6rem;
 }
-.EN_msg p[lang="msg_first"] {
+.EN_msg p[lang='msg_first'] {
   font-size: 44px;
   margin-bottom: 0;
 }
-.EN_msg p[lang="msg_second"] {
+.EN_msg p[lang='msg_second'] {
   display: none;
   margin-bottom: 0;
 }
 
-.EN_about p[lang="about_first"] {
+.EN_about p[lang='about_first'] {
   margin-top: 30%;
   font-size: 88px;
   font-weight: 800;
 }
-.EN_about *[lang="about_third"] {
+.EN_about *[lang='about_third'] {
   font-size: 52px;
 }
-.CN_about *[lang="about_seventeenth"] {
+.CN_about *[lang='about_seventeenth'] {
   font-size: 46px;
   line-height: 66px;
 }
@@ -429,4 +422,92 @@ select {
 }
 .CN_about .team-desc {
   height: 232px;
+}
+
+.EN_culture .culture-describe {
+  font-size: 36px;
+  line-height: 56px;
+}
+
+.EN_team .themecolor {
+  font-size: 48px;
+  line-height: 88px;
+}
+
+.EN_product .themecolor {
+  font-size: 48px;
+  line-height: 88px;
+}
+
+.about-wrapper .about {
+  padding: 120px 5% 0;
+}
+.team-wrapper .team {
+  padding: 120px 5% 0;
+}
+.culture-wrapper .culture {
+  padding: 120px 0 0;
+}
+.product-wrapper .product {
+  padding: 120px 5% 0;
+}
+@media only screen and (max-width: 1860px) {
+  .team-wrapper .team {
+    padding: 4% 0 0;
+  }
+  .culture-wrapper .culture {
+    padding: 4% 0 0;
+  }
+  .index-wrapper .home-index {
+    padding: 4% 0 0;
+  }
+  .about-wrapper .about {
+    padding: 4% 0 0;
+  }
+  .product-wrapper .product {
+    padding: 4% 0 0;
+  }
+  .home-decorate-two {
+    left: -56px;
+    bottom: 46px;
+  }
+}
+@media only screen and (max-width: 1430px) {
+  .EN_team .themecolor {
+    font-size: 40px;
+    line-height: 88px;
+  }
+  .team-wrapper .team-title {
+    font-size: 72px;
+  }
+  .EN_product .themecolor {
+    font-size: 40px;
+    line-height: 88px;
+  }
+  .CN_product .themecolor {
+    font-size: 70px;
+  }
+  .product-wrapper .team-title {
+    font-size: 72px;
+  }
+  .about-wrapper .about-title {
+    font-size: 72px;
+  }
+  .about-wrapper .themecolor {
+    font-size: 72px;
+  }
+  .culture .top-title {
+    font-size: 72px;
+    line-height: 88px;
+  }
+  .culture .themecolor {
+    font-size: 48px;
+    line-height: 88px;
+  }
+  .index-wrapper .home-title {
+    font-size: 72px;
+  }
+  .index-wrapper .home-title-themecolor {
+    font-size: 41px;
+  }
 }
