--- a/css/index.css
+++ b/css/index.css
@@ -522,3 +522,10 @@ select {
     font-size: 41px;
   }
 }
+
+.wp-image-206 {
+  width: 136px;
+  margin-left: -30px;
+  margin-bottom: -38px;
+  margin-top: -25px;
+}
