--- a/css/index.css
+++ b/css/index.css
@@ -80,6 +80,10 @@ select {
   bottom: 26%;
 }
 
+.product-icon-wrapper {
+  height: 96px;
+  line-height: 96px;
+}
 .product-icon {
   width: 96px;
   height: 96px;
@@ -288,6 +292,8 @@ select {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex: 0 0 20%;
+  max-width: 20%;
 }
 .product-sort .sort-item.active {
   color: #409eff;
@@ -321,7 +327,7 @@ select {
   z-index: 2;
   transition: transform 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
   list-style: none;
-  width: 25%;
+  width: 20%;
 }
 .product-img {
   cursor: auto;
@@ -343,11 +349,11 @@ select {
 }
 .product-img .desc {
   /* 超出显示省略号 */
-  overflow: hidden;
+  /* overflow: hidden;
   text-overflow: ellipsis;
   display: -webkit-box;
   -webkit-line-clamp: 1;
-  -webkit-box-orient: vertical;
+  -webkit-box-orient: vertical; */
 }
 .about-wrapper .google_font {
   font-family: '', Arial, Tahoma, sans-serif;
