--- a/css/index.css
+++ b/css/index.css
@@ -205,9 +205,9 @@ select {
 
 .swiper-slide img {
   display: block;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
+  width: 100% !important;
+  height: 100% !important;
+  object-fit: contain !important;
 }
 
 .img-wrap {
@@ -341,11 +341,11 @@ select {
 .product-img .title {
   color: #000;
   font-size: 16px;
-  overflow: hidden;
+  /* overflow: hidden;
   text-overflow: ellipsis;
   display: -webkit-box;
   -webkit-line-clamp: 1;
-  -webkit-box-orient: vertical;
+  -webkit-box-orient: vertical; */
 }
 .product-img .desc {
   /* 超出显示省略号 */
@@ -534,4 +534,8 @@ select {
   margin-left: -30px;
   margin-bottom: -38px;
   margin-top: -25px;
+}
+
+.el-image-viewer__close {
+  top: 80px !important;
 }
