--- a/css/index.css
+++ b/css/index.css
@@ -182,6 +182,11 @@ select {
   line-height: 66px;
   font-weight: 600;
 }
+.factory-describe {
+  font-size: 24px;
+  line-height: 46px;
+  font-weight: 600;
+}
 
 .swiper-container {
   height: 400px;
@@ -447,6 +452,24 @@ select {
   line-height: 88px;
 }
 
+.EN_contact .themecolor {
+  font-size: 58px;
+  line-height: 88px;
+}
+.EN_contact .contact-title {
+  font-size: 68px;
+  line-height: 88px;
+}
+
+.EN_factory .themecolor {
+  font-size: 48px;
+  line-height: 88px;
+}
+.EN_factory .contact-title {
+  font-size: 68px;
+  line-height: 88px;
+}
+
 .EN_product .themecolor {
   font-size: 48px;
   line-height: 88px;
@@ -458,14 +481,26 @@ select {
 .team-wrapper .team {
   padding: 120px 5% 0;
 }
+.contact-wrapper .contact {
+  padding: 120px 5% 0;
+}
 .culture-wrapper .culture {
   padding: 120px 0 0;
+}
+.factory-wrapper .factory {
+  padding: 120px 5% 0;
 }
 .product-wrapper .product {
   padding: 120px 5% 0;
 }
 @media only screen and (max-width: 1860px) {
   .team-wrapper .team {
+    padding: 4% 0 0;
+  }
+  .contact-wrapper .contact {
+    padding: 4% 0 0;
+  }
+  .factory-wrapper .factory {
     padding: 4% 0 0;
   }
   .culture-wrapper .culture {
@@ -492,6 +527,28 @@ select {
   }
   .team-wrapper .team-title {
     font-size: 72px;
+  }
+  .EN_contact .themecolor {
+    font-size: 40px;
+    line-height: 88px;
+  }
+  .contact-wrapper .contact-title {
+    font-size: 72px;
+  }
+  .EN_contact .contact-title {
+    font-size: 40px;
+    line-height: 88px;
+  }
+  .EN_factory .themecolor {
+    font-size: 40px;
+    line-height: 88px;
+  }
+  .factory-wrapper .factory-title {
+    font-size: 72px;
+  }
+  .EN_factory .factory-title {
+    font-size: 40px;
+    line-height: 88px;
   }
   .EN_product .themecolor {
     font-size: 40px;
