--- a/css/index.css
+++ b/css/index.css
@@ -435,7 +435,7 @@ select {
   line-height: 66px;
 }
 .EN_about .team-desc {
-  height: 310px;
+  height: 340px;
   padding: 0px 18px;
 }
 .CN_about .team-desc {
@@ -453,11 +453,19 @@ select {
 }
 
 .EN_contact .themecolor {
-  font-size: 58px;
+  font-size: 22px;
   line-height: 88px;
 }
 .EN_contact .contact-title {
-  font-size: 68px;
+  font-size: 32px;
+  line-height: 88px;
+}
+.CN_contact .themecolor {
+  font-size: 40px;
+  line-height: 88px;
+}
+.CN_contact .contact-title {
+  font-size: 58px;
   line-height: 88px;
 }
 
@@ -482,7 +490,7 @@ select {
   padding: 120px 5% 0;
 }
 .contact-wrapper .contact {
-  padding: 120px 5% 0;
+  padding: 120px 0% 0;
 }
 .culture-wrapper .culture {
   padding: 120px 0 0;
@@ -519,6 +527,14 @@ select {
     left: -56px;
     bottom: 46px;
   }
+  .EN_contact .themecolor {
+    font-size: 22px;
+    line-height: 88px;
+  }
+  .EN_contact .contact-title {
+    font-size: 28px;
+    line-height: 88px;
+  }
 }
 @media only screen and (max-width: 1430px) {
   .EN_team .themecolor {
@@ -529,16 +545,22 @@ select {
     font-size: 72px;
   }
   .EN_contact .themecolor {
-    font-size: 40px;
+    font-size: 18px;
     line-height: 88px;
-  }
-  .contact-wrapper .contact-title {
-    font-size: 72px;
   }
   .EN_contact .contact-title {
-    font-size: 40px;
+    font-size: 24px;
     line-height: 88px;
   }
+  .CN_contact .themecolor {
+    font-size: 32px;
+    line-height: 88px;
+  }
+  .CN_contact .contact-title {
+    font-size: 48px;
+    line-height: 88px;
+  }
+
   .EN_factory .themecolor {
     font-size: 40px;
     line-height: 88px;
@@ -595,4 +617,37 @@ select {
 
 .el-image-viewer__close {
   top: 80px !important;
+}
+
+.footer_wrapper span {
+  font-size: 24px;
+  line-height: 48px;
+}
+
+.post-bottom {
+  margin-top: 50px;
+  padding: 12px;
+  border: 2px solid #ffcf00;
+  border-radius: 12px;
+  margin-bottom: 50px;
+}
+
+.post-bottom a {
+  /* 缩小 */
+  transform: scale(0.8) translateX(-16px);
+}
+
+.EN_factory h4 {
+  font-size: 22px;
+}
+
+.EN_factory .factory-describe {
+  font-size: 18px;
+  line-height: 36px;
+}
+
+.logo-main {
+  display: inline;
+  max-height: 166px !important;
+  margin-top: -47px;
 }
