--- a/css/index.css
+++ b/css/index.css
@@ -453,7 +453,7 @@ select {
 }
 
 .EN_contact .themecolor {
-  font-size: 22px;
+  font-size: 32px;
   line-height: 88px;
 }
 .EN_contact .contact-title {
@@ -528,7 +528,7 @@ select {
     bottom: 46px;
   }
   .EN_contact .themecolor {
-    font-size: 22px;
+    font-size: 28px;
     line-height: 88px;
   }
   .EN_contact .contact-title {
@@ -545,7 +545,7 @@ select {
     font-size: 72px;
   }
   .EN_contact .themecolor {
-    font-size: 18px;
+    font-size: 24px;
     line-height: 88px;
   }
   .EN_contact .contact-title {
@@ -627,14 +627,16 @@ select {
 .post-bottom {
   margin-top: 50px;
   padding: 12px;
-  border: 2px solid #ffcf00;
-  border-radius: 12px;
   margin-bottom: 50px;
+  width: 100%;
+  text-align: center;
+  font-size: 24px;
 }
 
 .post-bottom a {
   /* 缩小 */
   transform: scale(0.8) translateX(-16px);
+  font-size: 24px;
 }
 
 .EN_factory h4 {
